[package]
name = "elster_ident"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
tokio-util = { version = "0.7.9", features = ["compat"] }
hyper = { version = "0.14.27", features = ["client", "http1"] }
tokio = { version = "1.33.0", features = ["fs", "rt", "rt-multi-thread", "macros", "net", "io-std", "io-util"] }

serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
rustls = "0.21.7"
tokio-rustls = "0.24.1"
eyre = "0.6.8"
dotenv = "0.15.0"

tracing = "0.1.40"
tracing-subscriber = "0.3.17"

tlsn-core = { git = "https://github.com/tlsnotary/tlsn.git?branch=dev"}
tlsn-prover = { git = "https://github.com/tlsnotary/tlsn.git?branch=dev", features = ["tracing"]}
thirtyfour = "0.31.0"
