[package]
name = "elster_ident"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
eyre = "0.6"
tokio-util = { version = "0.7", features = ["compat"] }
hyper = { version = "<=0.14.26", features = ["client", "http1"]}
tokio = { version = "1.33.0", features = ["fs", "rt", "rt-multi-thread", "macros", "net", "io-std", "io-util"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
opentelemetry = { version = "0.19" }
tracing-opentelemetry = "0.19"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.40"
rustls = "0.21"
tokio-rustls = "0.24"
rustls-pemfile = "1"

tlsn-core = { git = "https://github.com/tlsnotary/tlsn"}
tlsn-prover = { git = "https://github.com/tlsnotary/tlsn", features = ["tracing"]}

[patch.'https://github.com/tlsnotary/tlsn-utils']
tlsn-utils-aio = { path = "../tlsn-utils/utils-aio" }

